# babel-glade

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
babelglade/: __init__.py  extract.py  translate.py
babelglade/tests/: __init__.py  babelglade.py  extract.py  test.raw.appdata.xml  test.raw.desktop  test_extract.glade2.xml  test_extract.gtkbuilder.xml  test_extract.py  test_translate.py
babelglade/tests/locale/fr/LC_MESSAGES/: test.po
babelglade/tests/locale/nl/LC_MESSAGES/: test.po
